adding some basic styles

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/style/style.css">
 </head>
 <body>
 
 <div class="header1">
-   <h1>Destiny Spot-Light</h1>
+   <center><h1>Destiny Spot-Light</h1></center>
 </div>
 <div class="side-panel-left"> <ul>
     <li><button>News</button></li>
@@ -21,8 +22,10 @@
 </div>
 
 <div class="side-panel-right">
-    <input type="text" name="search" placeholder="Search...">
+    <br>
+    
     <ul>
+        <input type="text" name="search" placeholder="Search..." class="search">
         <li><button>Upload</button></li>
         <li><button>View Your Uploads</button></li>
         <li><button>Manage Account</button></li>
